add refresh token support with entity, repository, service, and controller endpoints for token refresh and logout functionality