@@ -6,12 +6,10 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.List;
+import java.util.Collections;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 class JwtUtilTest {
 
@@ -20,45 +18,150 @@ class JwtUtilTest {
 
     @BeforeEach
     void setUp() {
-        jwtUtil = new JwtUtil();
-        userDetails = new User("testuser", "password",
-                List.of(new SimpleGrantedAuthority("ROLE_USER")));
+        // Using test values for JWT configuration
+        String testSecret = "test-secret-key-for-junit-tests-that-is-long-enough-for-hmac-sha256";
+        long accessTokenExpiration = 900000; // 15 minutes
+        long refreshTokenExpiration = 604800000; // 7 days
+
+        jwtUtil = new JwtUtil(testSecret, accessTokenExpiration, refreshTokenExpiration);
+        userDetails = new User(
+                "testuser",
+                "password",
+                Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"))
+        );
     }
 
     @Test
     void generateToken_ShouldReturnValidToken() {
+        // When
         String token = jwtUtil.generateToken(userDetails);
 
-        assertNotNull(token);
-        assertFalse(token.isEmpty());
+        // Then
+        assertThat(token).isNotNull();
+        assertThat(token).isNotEmpty();
+    }
+
+    @Test
+    void generateRefreshToken_ShouldReturnValidToken() {
+        // When
+        String refreshToken = jwtUtil.generateRefreshToken(userDetails);
+
+        // Then
+        assertThat(refreshToken).isNotNull();
+        assertThat(refreshToken).isNotEmpty();
     }
 
     @Test
     void extractUsername_ShouldReturnCorrectUsername() {
+        // Given
         String token = jwtUtil.generateToken(userDetails);
 
+        // When
         String extractedUsername = jwtUtil.extractUsername(token);
 
-        assertEquals("testuser", extractedUsername);
+        // Then
+        assertThat(extractedUsername).isEqualTo("testuser");
+    }
+
+    @Test
+    void extractUsername_FromRefreshToken_ShouldReturnCorrectUsername() {
+        // Given
+        String refreshToken = jwtUtil.generateRefreshToken(userDetails);
+
+        // When
+        String extractedUsername = jwtUtil.extractUsername(refreshToken);
+
+        // Then
+        assertThat(extractedUsername).isEqualTo("testuser");
     }
 
     @Test
     void validateToken_ShouldReturnTrue_WhenTokenIsValid() {
+        // Given
         String token = jwtUtil.generateToken(userDetails);
 
+        // When
         boolean isValid = jwtUtil.validateToken(token, userDetails);
 
-        assertTrue(isValid);
+        // Then
+        assertThat(isValid).isTrue();
     }
 
     @Test
-    void validateToken_ShouldReturnFalse_WhenUserDetailsDoNotMatch() {
+    void validateToken_ShouldReturnFalse_WhenUsernameDoesNotMatch() {
+        // Given
         String token = jwtUtil.generateToken(userDetails);
-        UserDetails differentUser = new User("differentuser", "password",
-                List.of(new SimpleGrantedAuthority("ROLE_USER")));
+        UserDetails differentUser = new User(
+                "differentuser",
+                "password",
+                Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"))
+        );
 
+        // When
         boolean isValid = jwtUtil.validateToken(token, differentUser);
 
-        assertFalse(isValid);
+        // Then
+        assertThat(isValid).isFalse();
+    }
+
+    @Test
+    void isTokenExpired_ShouldReturnFalse_WhenTokenIsNotExpired() {
+        // Given
+        String token = jwtUtil.generateToken(userDetails);
+
+        // When
+        boolean isExpired = jwtUtil.isTokenExpired(token);
+
+        // Then
+        assertThat(isExpired).isFalse();
+    }
+
+    @Test
+    void isTokenExpired_ShouldReturnTrue_WhenTokenIsInvalid() {
+        // Given
+        String invalidToken = "invalid.token.here";
+
+        // When
+        boolean isExpired = jwtUtil.isTokenExpired(invalidToken);
+
+        // Then
+        assertThat(isExpired).isTrue();
+    }
+
+    @Test
+    void extractUsername_ShouldThrowException_WhenTokenIsInvalid() {
+        // Given
+        String invalidToken = "invalid.token.here";
+
+        // When & Then
+        assertThatThrownBy(() -> jwtUtil.extractUsername(invalidToken))
+                .isInstanceOf(Exception.class);
+    }
+
+    @Test
+    void validateToken_ShouldReturnFalse_WhenTokenIsInvalid() {
+        // Given
+        String invalidToken = "invalid.token.here";
+
+        // When
+        boolean isValid = jwtUtil.validateToken(invalidToken, userDetails);
+
+        // Then
+        assertThat(isValid).isFalse();
+    }
+
+    @Test
+    void refreshToken_ShouldHaveLongerExpiration_ThanAccessToken() throws InterruptedException {
+        // Given
+        String accessToken = jwtUtil.generateToken(userDetails);
+        String refreshToken = jwtUtil.generateRefreshToken(userDetails);
+
+        // When & Then - Both tokens should be valid now
+        assertThat(jwtUtil.isTokenExpired(accessToken)).isFalse();
+        assertThat(jwtUtil.isTokenExpired(refreshToken)).isFalse();
+
+        // Both tokens should contain the same username
+        assertThat(jwtUtil.extractUsername(accessToken)).isEqualTo("testuser");
+        assertThat(jwtUtil.extractUsername(refreshToken)).isEqualTo("testuser");
     }
 }
